# Atlas

./: .env.example  .eslintrc.js  .gitignore  .prettierrc  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  docker-publish.yml
api/: openapi.yaml  schema.graphql
apps/api/: Dockerfile  README.md  main.py  pyproject.toml
apps/api/app/core/: config.py  logging.py  telemetry.py
apps/api/app/routes/: health.py
apps/api/tests/: test_health.py  test_main.py
apps/web/: .eslintrc.js  Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/ai/recommendations/: route.ts
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/accounts/: page.tsx
apps/web/src/app/dashboard/costs/: page.tsx
apps/web/src/app/dashboard/recommendations/: page.tsx
apps/web/src/app/dashboard/resources/: page.tsx
apps/web/src/app/dashboard/settings/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/components/ui/: button.tsx  hero-section.tsx
apps/web/src/lib/: mock-data.ts  use-cloud-profile.ts
apps/web/src/lib/api/: client.ts  health.ts
apps/worker/: Dockerfile  locustfile.py  pyproject.toml
apps/worker/scripts/: check_forecast_quality.py
apps/worker/tests/: conftest.py  test_forecasting.py  test_optimization_engine.py  test_optimize_resources.py
apps/worker/tests/integration/: conftest.py  test_pipeline.py
apps/worker/tests/unit/: test_forecasting_edge.py  test_optimization_edge.py
apps/worker/worker/: __init__.py  config.py  db.py  dlq.py  idempotency.py  main.py  rate_limiter.py  redis_client.py  telemetry.py
apps/worker/worker/forecasting/: __init__.py  cache.py  evaluator.py  models.py  pipeline.py  preprocessor.py  store.py
apps/worker/worker/optimization/: __init__.py  benchmark.py  engine.py  greedy.py  packer.py  scorer.py  solver.py  types.py
apps/worker/worker/tasks/: cost_sync.py  dlq_processor.py  forecast.py  optimize.py  recommendations.py
clients/python/: atlas_client.py
clients/typescript/: atlas-client.ts
infra/grafana/dashboards/: atlas-observability.json
infra/otel/: otel-collector.yaml
infra/postgres/: init.sql  seed.py
infra/postgres/migrations/: 001_enums.down.sql  001_enums.up.sql  002_tables.down.sql  002_tables.up.sql  003_partitions.down.sql  003_partitions.up.sql  004_indexes.down.sql  004_indexes.up.sql  005_triggers.down.sql  005_triggers.up.sql  006_forecasts.down.sql  006_forecasts.up.sql
infra/postgres/queries/: 01_cost_over_time.sql  02_underutilized_resources.sql  03_top_savings_opportunities.sql
infra/prometheus/: prometheus.yml
